--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.417.0",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.3"
+    "mime-types": "^2.1.35",
+    "mongoose": "^7.4.3",
+    "multiparty": "^4.2.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
